--- a/src/app/tab3/tab3.page.scss
+++ b/src/app/tab3/tab3.page.scss
@@ -1,11 +1,41 @@
 
 
 
+
+
+#post {
+  width: 100%;
+  overflow: hidden; 
+}
+
+#profileImage {
+  
+  width: 30px !important;
+  height: 30px !important;
+  margin-top: 8px;
+  margin-left: 4px;
+  float:left;
+  margin-bottom: 5px;
+  border-radius: 3px;
+}
+
+
+#profileImageIn {
+  width: 100% !important; 
+  height: 100% !important;
+  object-fit: cover !important;
+}
+
+#userName {
+  overflow: hidden;
+  padding-left: 4px;
+}
+
 ion-card {
   border-radius: 0px !important;
 }
 
-.card-background-page {
+/* .card-background-page {
 
     ion-card {
       position: relative;
@@ -31,6 +61,7 @@ ion-card {
   
   }
 
+ */
 
    ion-title {
     font-family: "Pacifico" !important;
