--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -47,8 +47,8 @@
   </ion-card>
 
 
-  <ion-toolbar color="medium">
-<ion-segment style="width: 100%"(ionChange)= "segmentChanged()" [(ngModel)]="segment" color="dark">
+  <ion-toolbar style="width: 100% !important" color="medium">
+<ion-segment (ionChange)= "segmentChanged()" [(ngModel)]="segment" color="dark">
   <ion-segment-button value = "0">
     <ion-icon id ="heart" name="heart"></ion-icon><p id="Wipped">Wipped</p>
   </ion-segment-button>
