--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -7,21 +7,24 @@
 </ion-header>
 
   <ion-content class="card-background-page" color="medium">
-      <div style="text-align: center;">
-          <ion-spinner style="text-align: center; margin: auto;"  *ngIf="!posts"></ion-spinner>  
-        </div> 
-    <div>
-    <ion-refresher  (ionRefresh)="tabTwoFeed($event)">
-      <ion-refresher-content pullingIcon="arrow-dropdown" 
-       refreshingSpinner="circles" refreshingText="refreshing..">
-      </ion-refresher-content>
-      </ion-refresher>
-    </div>  
-    <div *ngIf="posts" style="padding-top: 40px!important;">
-        <ion-card  style="margin-top: 40px " *ngFor ="let post of posts" [routerLink]="['/tabs/details-feed/', post.postID]">
-         <img [src]="post.profileImage">
+  <div style="text-align: center;">
+      <ion-spinner style="text-align: center; margin: auto;"  *ngIf="!posts"></ion-spinner>  
+    </div> 
+      <div>
+      <ion-refresher  (ionRefresh)="tabThreeFeed($event)">
+        <ion-refresher-content pullingIcon="arrow-dropdown" 
+         refreshingSpinner="circles" refreshingText="refreshing..">
+        </ion-refresher-content>
+        </ion-refresher>
+      </div>  
+      <div id ="post" *ngIf="posts" >
+        <ion-card  *ngFor ="let post of posts" [routerLink]="['/tabs/details-feed/', post.postID]">
+        <div id ="profileImage" >
+           <img id ="profileImageIn" [src]="post.profileImage">
+          </div> 
+          <div  id ="userName" ><h6>{{post.username}}</h6></div>
           <img [src]="post.image">
-            <div class="card-title">{{post.title}}</div>
+        <!-- <div class="card-title">{{post.title}}</div> -->
         </ion-card>
          </div>  
 </ion-content> 
