--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -78,6 +78,8 @@
 /** background color **/
   --ion-background-color:#ffffff;
 
+  --ion-color-transparent: #000000; 
+
   @font-face {
     font-family: 'Pacifico';
     font-style: normal;
