--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,11 +1,12 @@
 
 
 <ion-content  padding class="form-content">
-    <form [formGroup]="validations_form" (ngSubmit)="tryLogin(validations_form.value)">
+    <div class="title"><h1>Wippy</h1></div>
+    <form class="form"[formGroup]="validations_form" (ngSubmit)="tryLogin(validations_form.value)">
       
-      <ion-item id =""class="item item-trns text-center">
-        <ion-label position="floating" >Email</ion-label>
-        <ion-input type="text" formControlName="email"></ion-input>
+      <ion-item color="transparent" class="item item-trns text-center">
+        <ion-label style="color:white !important"position="floating" >Email</ion-label>
+        <ion-input style="color:white !important"type="text" formControlName="email"></ion-input>
       </ion-item>
       <div class="validation-errors">
         <ng-container *ngFor="let validation of validation_messages.email">
@@ -14,9 +15,9 @@
           </div>
         </ng-container>
       </div>
-      <ion-item>
-        <ion-label position="floating" >Password</ion-label>
-        <ion-input type="password" formControlName="password"></ion-input>
+      <ion-item  color="transparent">
+        <ion-label style="color:white !important" position="floating" >Password</ion-label>
+        <ion-input style="color:white !important" type="password" formControlName="password"></ion-input>
       </ion-item>
       <div class="validation-errors">
         <ng-container *ngFor="let validation of validation_messages.password">
@@ -30,19 +31,7 @@
     </form>
     
     <p class="go-to-register">
-      No account yet? <ion-button (click)="goRegisterPage()">Register</ion-button>
+      No account yet? <ion-button color="transparent" (click)="goRegisterPage()">Register</ion-button>
     </p>
-  </ion-content>
-  <ion-content>
-      <form [formGroup]="todo" (ngSubmit)="logForm()">
-          <ion-item>
-            <ion-label>Todo</ion-label>
-            <ion-input type="text" formControlName="title"></ion-input>
-          </ion-item>
-          <ion-item>
-            <ion-label>Description</ion-label>
-            <ion-textarea formControlName="description"></ion-textarea>
-          </ion-item>
-          <ion-button ion-button type="submit" [disabled]="!todo.valid">Submit</ion-button>
-        </form>
-  </ion-content>
+    </ion-content>
+ 
