--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -1,22 +1,25 @@
 
 <ion-content padding class="form-content">
+  <div class="title"><h1>Wippy</h1></div>
   <form class="form" [formGroup]="validations_form" (ngSubmit)="tryRegister(validations_form.value)">
 
-    <ion-item >
-      <ion-label  position="floating" color="primary">Email</ion-label>
-      <ion-input  type="text" formControlName="email"></ion-input>
-    </ion-item >
+
+    <ion-item color="transparent" style="border: white">
+      <ion-label style="color:white !important" position="floating" color="primary">Email</ion-label>
+      <ion-input style="color:white !important" type="text" formControlName="email"></ion-input>
+    </ion-item>
+
     <div class="validation-errors">
       <ng-container *ngFor="let validation of validation_messages.email">
         <div class="error-message" *ngIf="validations_form.get('email').hasError(validation.type) && (validations_form.get('email').dirty || validations_form.get('email').touched)">
-          {{ validation.message }}
+          {{validation.message}}
         </div>
       </ng-container>
     </div>
 
-    <ion-item>
-      <ion-label position="floating" color="primary">Password</ion-label>
-      <ion-input type="password" formControlName="password"></ion-input>
+    <ion-item color="transparent">
+      <ion-label style="color:white !important" position="floating" color="primary">Password</ion-label>
+      <ion-input style="color:white !important"type="password" formControlName="password"></ion-input>
     </ion-item>
     <div class="validation-errors">
       <ng-container *ngFor="let validation of validation_messages.password">
@@ -26,10 +29,10 @@
       </ng-container>
     </div>
 
-    <ion-button class="submit-btn" expand="block" type="submit" [disabled]="!validations_form.valid">Register</ion-button>
+    <ion-button   class="submit-btn" expand="block" type="submit" [disabled]="!validations_form.valid">Register</ion-button>
     <label class="error-message">{{errorMessage}}</label>
     <label class="success-message">{{successMessage}}</label>
   </form>
-  <p class="go-to-login">Already have an account? <ion-button (click)="goLoginPage()">Login</ion-button></p>
+  <p class="go-to-login">Already have an account? <ion-button color="transparent" (click)="goLoginPage()">Login</ion-button></p>
 
 </ion-content>
