--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -32,16 +32,19 @@
 </ion-row>
 
 </ion-grid> -->
-<div *ngFor="let item of students" style="text-align: center;">
-<img [src]="item.profileImage" style="height: 90px;  margin-top: 10px;">
+<div class="imageHold" *ngFor="let item of students | slice:1:2" style="text-align: center; z-index: 7; position: absolute; margin-left: auto;
+margin-right: auto;
+left: 0;
+right: 0;">
+<img  class="profileImg" [src]="item.profileImage" style="margin-top: 10px;">
 </div>
-<ion-card *ngFor="let item of students" >
+<ion-card style="text-align: center; z-index: 1; margin-top: 70px" *ngFor="let item of students | slice:1:2" >
     
     <ion-card-header>
-      <ion-card-title>{{item.userName}}</ion-card-title>
+      <ion-card-title style="margin-top: 30px;">{{item.userName}}</ion-card-title>
     </ion-card-header>
   
-    <ion-card-content>
+    <ion-card-content  style="padding-top: 0px !important;">
         {{item.userBio}}
     </ion-card-content>
   </ion-card>
