--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -32,13 +32,13 @@
 </ion-row>
 
 </ion-grid> -->
-<div class="imageHold" *ngFor="let item of students | slice:1:2" style="text-align: center; z-index: 7; position: absolute; margin-left: auto;
+<div class="imageHold" *ngFor="let item of students" style="text-align: center; z-index: 7; position: absolute; margin-left: auto;
 margin-right: auto;
 left: 0;
 right: 0;">
 <img  class="profileImg" [src]="item.profileImage" style="margin-top: 10px;">
 </div>
-<ion-card style="text-align: center; z-index: 1; margin-top: 70px" *ngFor="let item of students | slice:1:2" >
+<ion-card style="text-align: center; z-index: 1; margin-top: 70px" *ngFor="let item of students" >
     
     <ion-card-header>
       <ion-card-title style="margin-top: 30px;">{{item.userName}}</ion-card-title>
@@ -54,10 +54,10 @@ right: 0;">
   <ion-toolbar style="width: 100% !important" color="medium">
       <ion-segment (ionChange)= "segmentChanged()" [(ngModel)]="segment" color="dark">
         <ion-segment-button value = "0" layout="icon-start">
-          <ion-icon id ="heart" name="heart"></ion-icon><p id="Wipped">Wipped</p>
+          <ion-icon id ="heart" name="heart-half"></ion-icon><p id="Wipping">Wipping</p>
         </ion-segment-button>
         <ion-segment-button value="1" layout="icon-start">
-          <ion-icon name="heart-half"></ion-icon><p id="Wipping">Wipping</p>
+          <ion-icon name="heart"></ion-icon><p id="Wipped">Wipped</p>
         </ion-segment-button>
       </ion-segment>
       </ion-toolbar>
@@ -79,7 +79,7 @@ right: 0;">
 <ion-slides #slides (ionSlideDidChange)="slideChanged()" scrollbar="true">
   <ion-slide>
   <ion-grid>
-    <ion-row *ngIf="items">
+    <ion-row *ngIf="!items">
       <ion-col>
         <p style="color: #383a3e">You haven't posted any finished work yet </p>
       </ion-col>
@@ -113,14 +113,14 @@ right: 0;">
 
 <ion-slide>
     <ion-grid>
-        <ion-row *ngIf="eventList">
+        <ion-row *ngIf="!eventList">
             <ion-col>
              <p style="color: #383a3e"> You haven't posted any work in progress yet </p>
             </ion-col>
           </ion-row>
         <ion-row>
-        <ion-col size="12" *ngIf="!eventList">
-        <ion-card *ngFor ="let event of eventList" [routerLink]="['/tabs/details/', event?.id]">
+        <ion-col size="12" >
+        <ion-card *ngFor ="let event of eventList" [routerLink]="['/tabs/details-wipping/', event?.id]">
           <img [src]="event?.image">
           <div class="card-title">{{event?.title}}</div>
         </ion-card>
