wipped? button added

--- a/src/app/details-wipped/details-wipped.page.html
+++ b/src/app/details-wipped/details-wipped.page.html
@@ -40,6 +40,6 @@
         <p>{{item.description}}</p>
       </div>
 </div>
-
+<ion-button class="delete-button" expand="full" color="light" (click)="delete()">Delete</ion-button>
 
 </ion-content>
