--- a/src/app/details/details.page.html
+++ b/src/app/details/details.page.html
@@ -41,13 +41,18 @@
       </div>
 </div>
 <ion-grid>
-    </ion-row>
+    <ion-row>
        <ion-col>
          <ion-button shape="circle"  color="tertiary"  (click)="openImagePicker()">  <ion-icon name="images"></ion-icon><h6> Add Picture</h6></ion-button>
              </ion-col>
+          
              <ion-col>
-          <ion-button shape="circle"  color="tertiary"  (click)="openImagePicker()">  <ion-icon name="images"></ion-icon><h6> Add Picture</h6></ion-button>
+          <ion-button shape="circle"  color="secondary"  (click)="makeWipped()"> 
+            <h6 *ngIf ="category !== Wipped"  >Wipped </h6><h6 *ngIf ="category == Wipping" >Wipped ?</h6></ion-button>
         </ion-col>
+      </ion-row>
+      </ion-grid>
+
   
 
 
