--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -6,7 +6,7 @@
 
     <ion-item color="transparent" style="border: white">
       <ion-label style="color:white !important" position="floating" color="primary">Email</ion-label>
-      <ion-input style="color:white !important" type="text" formControlName="email"></ion-input>
+      <ion-input type="text" formControlName="email"></ion-input>
     </ion-item>
 
     <div class="validation-errors">
@@ -19,7 +19,7 @@
 
     <ion-item color="transparent">
       <ion-label style="color:white !important" position="floating" color="primary">Password</ion-label>
-      <ion-input style="color:white !important"type="password" formControlName="password"></ion-input>
+      <ion-input type="password" formControlName="password"></ion-input>
     </ion-item>
     <div class="validation-errors">
       <ng-container *ngFor="let validation of validation_messages.password">
