config-changed for app store

--- a/src/app/edit-profile/edit-profile.page.html
+++ b/src/app/edit-profile/edit-profile.page.html
@@ -19,7 +19,7 @@
 </ion-col>
  -->
 
- <ion-col>
+ <ion-col  *ngFor="let item of students">
    <div  class= "imageHold" >
     <img class= "profileImg"[src]= "profileImage"> 
   </div>
