--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -18,6 +18,7 @@
         </ion-refresher>
       </div>  
       <div id ="post" *ngIf="posts" >
+          <!-- [routerLink]="['/tabs/details-feed/', post.postID]"> -->
         <ion-card  *ngFor ="let post of posts" [routerLink]="['/tabs/details-feed/', post.postID]">
         <div id ="profileImage" >
            <img id ="profileImageIn" [src]="post.profileImage">
