--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -112,7 +112,28 @@ right: 0;">
 
 
 <ion-slide>
-    <ion-grid>
+
+
+  
+
+ <ion-grid>
+        <ion-row *ngIf="favoriteList >= 0">
+            <ion-col>
+             <p style="color: #383a3e"> You haven't posted any work in progress yet </p>
+            </ion-col>
+          </ion-row>
+        <ion-row>
+        <ion-col size="12" >
+        <ion-card *ngFor ="let favorite of favoriteList">
+          <img [src]="favorite?.image">
+          <div class="card-title">{{favorite?.title}}</div>
+        </ion-card>
+        </ion-col>
+      </ion-row>
+      </ion-grid> 
+
+
+  <!--   <ion-grid>
         <ion-row *ngIf="eventList >= 0">
             <ion-col>
              <p style="color: #383a3e"> You haven't posted any work in progress yet </p>
@@ -126,17 +147,8 @@ right: 0;">
         </ion-card>
         </ion-col>
       </ion-row>
-      </ion-grid>
-   <!--  <ion-list>
-        <ion-list-header>
-          <ion-label>Your next events</ion-label>
-        </ion-list-header>
-        <ion-item tappable *ngFor="let event of eventList" routerLink="/event-detail/{{ event.id }}">
-          <ion-label>
-            <h2>{{event?.description}}</h2>
-          </ion-label>
-        </ion-item>
-      </ion-list> -->
+      </ion-grid> -->
+
 </ion-slide>
 </ion-slides>
 </ion-content>
