--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -115,7 +115,7 @@ right: 0;">
 
 
   
-
+<!-- 
  <ion-grid>
         <ion-row *ngIf="favoriteList >= 0">
             <ion-col>
@@ -126,14 +126,14 @@ right: 0;">
         <ion-col size="12" >
         <ion-card *ngFor ="let favorite of favoriteList">
           <img [src]="favorite?.image">
-          <div class="card-title">{{favorite?.title}}</div>
+          <div class="card-title">{{favorite?.favorite.title}}</div>
         </ion-card>
         </ion-col>
       </ion-row>
-      </ion-grid> 
+      </ion-grid>  -->
 
 
-  <!--   <ion-grid>
+  <ion-grid>
         <ion-row *ngIf="eventList >= 0">
             <ion-col>
              <p style="color: #383a3e"> You haven't posted any work in progress yet </p>
@@ -147,7 +147,7 @@ right: 0;">
         </ion-card>
         </ion-col>
       </ion-row>
-      </ion-grid> -->
+      </ion-grid> 
 
 </ion-slide>
 </ion-slides>
