side menu working

--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -2,10 +2,13 @@
 <ion-header>
   <ion-toolbar color="dark">
     <ion-title >Profile</ion-title>
-    <ion-button type ="round" slot="end"  (click)="gotoeditPage()" color="light">
+    <ion-buttons slot= "end">
+      <ion-menu-button autoHide="false"></ion-menu-button>
+      </ion-buttons>
+  <!--   <ion-button type ="round" slot="end"  (click)="gotoeditPage()" color="light">
         <ion-icon name="menu">
       </ion-icon>
-    </ion-button>
+    </ion-button> -->
   </ion-toolbar>
 </ion-header>
 <ion-content class="card-background-page" color="medium">
