--- a/src/app/favorites/favorites.page.html
+++ b/src/app/favorites/favorites.page.html
@@ -5,5 +5,17 @@
 </ion-header>
 
 <ion-content>
-
+  <ion-grid>
+    <ion-row>
+    <ion-col size="12" >
+        <ion-card *ngFor ="let favorite of favoriteList">   
+            <ng-container *ngFor="let item of favorite?.favoriteList">
+                <img [src]="item.image[0]">
+                <div class="card-title">{{ item | json }}</div>
+                <div>{{item?.description}}</div>
+            </ng-container>
+        </ion-card>
+    </ion-col>
+  </ion-row>
+  </ion-grid>  
 </ion-content>
