--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -10,19 +10,55 @@
 /*  ion-label {
     background-color: yellow !important;
 } */
+
+
+@media only screen 
+and (min-device-width : 375px) 
+and (max-device-width : 812px)
+and (-webkit-device-pixel-ratio : 3) { 
+ion-input {
+     font-size: 20px !important ;
+   //   background-color: white;
+     border-radius: 10px ;
+     border-width: 0px !important ; 
+     padding: 10px !important;
+   }
+
+   ion-item {
+       border-radius: 16px;
+   }
+
+
+
 .form {
-    margin-top: 95%;
-}
+   border-radius: 10px ;
+   margin-top: 400px;
+  // background-color: rgba(255, 255, 255, 0.5);
+   padding: 10px !important;
+ }
+
+
 
 .title {
    font-family: "Pacifico" !important;
    color: white;
    text-align: center;
+
 }
+
+.submit-btn {
+    margin-top: 20px !important;
+}
+
 
 
 #formtest {
   color: blue !important;
+}
+
+ion-label { 
+    color: black !important; 
+}
 }
 
 /* ion-item {
