--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -54,9 +54,9 @@ right: 0;">
 
 
 
-  <ion-toolbar style="width: 100% !important" color="medium">
-      <ion-segment (ionChange)= "segmentChanged()" [(ngModel)]="segment" color="dark">
-        <ion-segment-button value = "0" layout="icon-start">
+  <ion-toolbar style="width: 100% !important" >
+      <ion-segment (ionChange)= "segmentChanged()" [(ngModel)]="segment" >
+        <ion-segment-button  value = "0" layout="icon-start">
           <ion-icon id ="heart" name="heart-half"></ion-icon><p id="Wipping">Wipping</p>
         </ion-segment-button>
         <ion-segment-button value="1" layout="icon-start">
