--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -93,4 +93,11 @@
     --ion-color-base:green;
   }
 
+    /* ion-segment-button {
+      --indicator-color: transparent !important;
+      --indicator-color-checked: red !important;
+    }
+ */
+   
+
 }
