--- a/src/app/tab4/tab4.page.scss
+++ b/src/app/tab4/tab4.page.scss
@@ -35,9 +35,30 @@
   
   }
 
+  ion-segment {
+    --border-color: red !important;
+    --background-activated: red !important;
+    --border-radius: 20px !important;
+    --indicator-color-checked: orange !important;
+
+  
+  }
+
+  ion-segment-button {
+    --border-color:rgb(204, 204, 204) ;
+    --background-activated: red !important;
+    --border-radius: 20px !important;
+    --color-checked: rgb(58, 58, 58) !important;
+    --indicator-color: purple !important;
+    --color: rgb(204, 204, 204) !important;
+    --color-activated:  rgb(141, 141, 141) !important;
+  }
+
   ion-content div{
     margin: auto;
 }
+
+
 
 /* <ion-segment-button value = "0">
 <ion-icon id ="heart" name="heart"></ion-icon><p id="Wipped">Wipped</p>
