--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -12,32 +12,47 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content >
+
   <!--   *ngIf="image.length == 0 && !category" -->
-       <div id="categorybtn"  *ngIf="image.length == 0 && !category" >
+       <!-- <div id="categorybtn"  *ngIf="image.length == 0 && !category" >
   <ion-button   class="imagebutton" size="large" shape="round" color="secondary" (click)="newProject()"><ion-icon name="heart-half" ></ion-icon></ion-button>
   <h5 style="color:white; margin-top: 22px; margin-left: 9px;">New Project</h5>
    </div>
-   <!-- *ngIf="image.length == 0 && !category"  -->
-      <div id="categorybtn"  *ngIf="image.length == 0 && !category" >
+  *ngIf="image.length == 0 && !category"  
+  <div id="categorybtn"  *ngIf="image.length == 0 && !category" >
    <ion-button  size="large" color="tertiary" shape="round"  (click)="completeProject()" ><ion-icon name="heart-empty" ></ion-icon></ion-button>
    <h5 style="color:white;  margin-top: 22px; margin-left: 9px;">Finished Project</h5>
-  </div>
+  </div> -->
   <!-- *ngIf ="!image?.length > 0 && category" -->
-       <div id="picturebtn" *ngIf ="!image?.length > 0 && category" >
-   <ion-button size="large" (click)="openImagePicker()"  shape = "round" color="tertiary"><ion-icon name="folder-open"></ion-icon></ion-button>
+  <div>
+      <ion-item  no-padding style ="text-align: center;" id="projectTitle" color="transparent">
+          <ion-input [(ngModel)]="title" class="text-input" placeholder="Project Title"></ion-input>
+          </ion-item>
+            <div style="text-align: center !important;" >
+            <ion-button   *ngIf ="!title"  style="margin-top: 40%" color ="transparent">maybe later</ion-button>
+            <ion-button  (click)="nextOption()" *ngIf = "title && !nextOptions"   style="margin-top: 40%"color ="transparent">next</ion-button>
+          </div>
+        </div>
+
+   
+
+       <div id="picturebtn" *ngIf ="!image?.length > 0 && nextOptions">
+   <ion-button size="large" (click)="openImagePicker()"  shape = "round" color="tertiary">
+     <ion-icon name="folder-open"></ion-icon></ion-button>
        <h6 style="color:white; margin-top: 22px; margin-left: 9px;">Gallery</h6>
   </div>
   <!-- *ngIf ="!image?.length > 0 && category" -->
-    <div id="picturebtn" *ngIf ="!image?.length > 0 && category"  >
+    <div id="picturebtn" *ngIf ="!image?.length > 0 "  >
    <ion-button size="large" (click)="takePicture()" shape = "round" color="secondary"><ion-icon name="camera" ></ion-icon></ion-button>
          <h6 style="color:white; margin-top: 22px; margin-left: 9px;">Take Picture</h6>  
   </div>  
+
   <!-- *ngIf ="!image?.length > 0 && category" -->
   <div id="nvm" *ngIf ="!image?.length > 0 && category" >
-      <ion-button color="danger" size="large" (click)="backtocategory()" shape = "round"> <ion-icon name="arrow-round-back"></ion-icon></ion-button>
-             
+      <ion-button color="danger" size="large" (click)="backtocategory()" shape = "round"> <ion-icon name="arrow-round-back"></ion-icon></ion-button>            
      </div> 
+
    <ion-slides [options] = "sliderOpts">
              <ion-slide *ngFor="let image of image">
                <img [src]= "image"> 
@@ -46,12 +61,12 @@
                     
                      <div id="form" *ngIf ="image.length > 0">
                          <form  id ="ngForm" [formGroup]="validations_form" (ngSubmit)="onSubmit(validations_form.value)" novalidate>
-                           <ion-item color="dark">
-                              <ion-label position="floating">Say Something</ion-label>
-                              <ion-input type="text" formControlName="description"  color="light"></ion-input>
-                              </ion-item>
-                               <ion-item style="display: none !important"color="dark" *ngFor="let value of students">
-                            <ion-label position="floating"></ion-label>
+                            <ion-item color="dark">
+                                <ion-label position="floating">Say Something</ion-label>
+                                 <ion-textarea formControlName="description"  color="light"></ion-textarea>
+                                 </ion-item>
+                                 <ion-item style="display: none !important"color="dark" *ngFor="let value of students">
+                              <ion-label position="floating"></ion-label>
                          <ion-input type="text" formControlName="userName" [(ngModel)]="value.userName" color="light"></ion-input>
                                </ion-item>
                                <ion-item style="display: none !important" color="dark" *ngFor="let value of students">
