--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -41,7 +41,10 @@
         top:45%;}
     }
 
-    #categorybtn {
+    //#categorybtn 
+    #picturebtn 
+    
+    {
       position: relative;
       animation-name: button;
       animation-duration: 0.7s;
@@ -51,10 +54,7 @@
      // justify-content: center;
     }
 
-    ion-title {
-     // font-family: 'Pacifico';
-
-      }
+   
 
       ion-label{
        font-family: 'Pacifico' !important;
@@ -72,7 +72,7 @@
       display: flex;
     }
 
-    #picturebtn {
+   /*  #picturebtn {
       left: 30%;
       top: 45%;
       position: relative;
@@ -82,7 +82,14 @@
       z-index: 100;
       display: flex;
       
+    } */
+
+    #projectTitle{
+      margin-top: 300px;
+      color: white !important;
     }
+
+  
 
    
 
