--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar color="dark">
     <ion-title>
       <ion-item color="transparent">
-<ion-input *ngIf ="image.length > 0" placeholder="Title" [(ngModel)]="title"></ion-input>
+<ion-input *ngIf ="image.length > 0"  [(ngModel)]="title"></ion-input>
 </ion-item>
     </ion-title>
    <!-- *ngIf="image.length == 0"  -->
@@ -26,13 +26,15 @@
   </div> -->
   <!-- *ngIf ="!image?.length > 0 && category" -->
  
-      <ion-item *ngIf = "nextOptions == next" no-padding style ="text-align: center;" id="projectTitle" color="transparent">
-          <ion-input [(ngModel)]="title" class="text-input" placeholder="Project Title"></ion-input>
-          </ion-item>
-            <div style="text-align: center !important;" >
-            <ion-button   *ngIf ="!title"  style="margin-top: 40%" color ="transparent">maybe later</ion-button>
-            <ion-button  (click)="nextOption()" *ngIf = "title && !nextOptions"   style="margin-top: 40%"color ="transparent">next</ion-button>
-          </div>
+  <ng-container *ngIf = "nextOptions == 'previous'">
+      <ion-item no-padding style = "text-align: center;" id="projectTitle" color="transparent">
+            <ion-input [(ngModel)]="title" class="text-input" placeholder="Project Title"></ion-input>
+               </ion-item>
+                 <div style="text-align: center !important;" >
+                 <ion-button   *ngIf ="!title"  style="margin-top: 40%" color ="transparent">maybe later</ion-button>
+                 <ion-button  (click)="nextOption()" *ngIf = "title "   style="margin-top: 40%"color ="transparent">next</ion-button>
+               </div> 
+     </ng-container>
         
 
    
@@ -43,22 +45,21 @@
        <h6 style="color:white; margin-top: 22px; margin-left: 9px;">Gallery</h6>
   </div>
   <!-- *ngIf ="!image?.length > 0 && category" -->
-    <div id="picturebtn" *ngIf ="!image?.length > 0 "  >
+    <div id="picturebtn" *ngIf ="!image?.length > 0 && nextOptions"  >
    <ion-button size="large" (click)="takePicture()" shape = "round" color="secondary"><ion-icon name="camera" ></ion-icon></ion-button>
          <h6 style="color:white; margin-top: 22px; margin-left: 9px;">Take Picture</h6>  
   </div>  
 
   <!-- *ngIf ="!image?.length > 0 && category" -->
-  <div id="nvm" *ngIf ="!image?.length > 0 && category" >
-      <ion-button color="danger" size="large" (click)="backtocategory()" shape = "round"> <ion-icon name="arrow-round-back"></ion-icon></ion-button>            
+  <div id="nvm" *ngIf ="!image?.length > 0 && nextOptions" >
+      <ion-button color="danger" size="large" (click)="backtoTitle()" shape = "round"> <ion-icon name="arrow-round-back"></ion-icon></ion-button>            
      </div> 
 
    <ion-slides [options] = "sliderOpts">
              <ion-slide *ngFor="let image of image">
                <img [src]= "image"> 
                  </ion-slide>
-                     </ion-slides>
-                    
+                     </ion-slides>   
                      <div id="form" *ngIf ="image.length > 0">
                          <form  id ="ngForm" [formGroup]="validations_form" (ngSubmit)="onSubmit(validations_form.value)" novalidate>
                             <ion-item color="dark">
